k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
spec:
  type: ClusterIP
  selector:
    app: personal-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
